[project]
name = "crystal-detector"
version = "0.1.0"
description = "Crystal detection and tracking system"
requires-python = ">=3.10,<3.13"
dependencies = [
    "setuptools>=65.0.0",,  
    "beautifulsoup4==4.13.3",
    "boxmot==12.0.1",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "colorama==0.4.6",
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "deep-sort-realtime==1.3.2",
    "et-xmlfile==2.0.0",
    "filelock==3.17.0",
    "filterpy==1.4.5",
    "fonttools==4.56.0",
    "fsspec==2025.2.0",
    "ftfy==6.3.1",
    "gdown==5.2.0",
    "gitdb==4.0.12",
    "gitpython==3.1.44",
    "idna==3.10",
    "jinja2==3.1.5",
    "joblib==1.4.2",
    "kiwisolver==1.4.8",
    "lap==0.5.12",
    "lapx==0.5.11.post1",
    "llvmlite==0.44.0",
    "loguru==0.7.3",
    "markupsafe==3.0.2",
    "matplotlib==3.10.0",
    "mpmath==1.3.0",
    "networkx==3.4.2",
    "numba==0.61.2",
    "numpy==1.26.4",
    "opencv-python==4.11.0.86",
    "openpyxl==3.1.5",
    "packaging==24.2",
    "pandas==2.2.3",
    "pillow==11.1.0",
    "psutil==6.1.1",
    "py-cpuinfo==9.0.0",
    "pynndescent==0.5.13",
    "pyparsing==3.2.1",
    "pysocks==1.7.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.1",
    "pyyaml==6.0.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "scikit-learn==1.6.1",
    "scipy==1.15.1",
    "seaborn==0.13.2",
    "six==1.17.0",
    "smmap==5.0.2",
    "soupsieve==2.6",
    "sympy==1.13.3",
    "threadpoolctl==3.6.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "torchvision>=0.17.0,<0.18.0",
    "tqdm==4.67.1",
    "typing-extensions==4.12.2",
    "tzdata==2025.1",
    "ultralytics==8.3.75",
    "ultralytics-thop==2.0.14",
    "umap-learn==0.5.7",
    "urllib3==2.3.0",
    "wcwidth==0.2.13",
    "yacs==0.1.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]